--- a/OnlineShopping/Core/OnlineShopping.Models/OnlineShopping.Models.csproj
+++ b/OnlineShopping/Core/OnlineShopping.Models/OnlineShopping.Models.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DomainValidation" Version="1.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.11.1" />
   </ItemGroup>
 
