removed packages i suspected might cause license issue on other machines

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /OnlineShopping/Core/OnlineShopping.Models/validation/RuleValidator.cs
 /OnlineShopping/Core/OnlineShopping.Models/validation/ValidationAttribute.cs
 /OnlineShopping/Core/OnlineShopping.Models/validation/ValidationResult.cs
+/OnlineShopping/Hosts/UI/OnlineShopping/.angular/cache
