--- a/OnlineShopping/Hosts/UI/OnlineShopping/angular.json
+++ b/OnlineShopping/Hosts/UI/OnlineShopping/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "CovidScreening": {
+    "OnlineShopping": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -26,17 +26,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/web.config",
-              {
-                "glob": "**/*",
-                "input": "./node_modules/ngx-extended-pdf-viewer/assets/locale",
-                "output": "/assets/locale/"
-              },
-              {
-                "glob": "**/*",
-                "input": "./node_modules/ngx-extended-pdf-viewer/assets/images",
-                "output": "/assets/images/"
-              }
+              "src/web.config"
             ],
             "styles": [
               "src/styles.scss",
@@ -46,10 +36,7 @@
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "./node_modules/ngx-extended-pdf-viewer/assets/pdf-es5.js",
-              "./node_modules/ngx-extended-pdf-viewer/assets/pdf.worker-es5.js",
-              "./node_modules/ngx-extended-pdf-viewer/assets/viewer-es5.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
@@ -89,22 +76,22 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "CovidScreening:build",
+            "browserTarget": "OnlineShopping:build",
             "disableHostCheck": true
           },
           "configurations": {
             "production": {
-              "browserTarget": "CovidScreening:build:production"
+              "browserTarget": "OnlineShopping:build:production"
             },
             "es5": {
-              "browserTarget": "CovidScreening:build:es5"
+              "browserTarget": "OnlineShopping:build:es5"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "CovidScreening:build"
+            "browserTarget": "OnlineShopping:build"
           }
         },
         "test": {
@@ -117,12 +104,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/web.config",
-              {
-                "glob": "**/*",
-                "input": "node_modules/ngx-extended-pdf-viewer/assets/",
-                "output": "src/assets/pdfviewer/"
-              }
+              "src/web.config"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
@@ -148,18 +130,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "CovidScreening:serve"
+            "devServerTarget": "OnlineShopping:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "CovidScreening:serve:production"
+              "devServerTarget": "OnlineShopping:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "CovidScreening",
+  "defaultProject": "OnlineShopping",
   "cli": {
     "analytics": false
   }
