--- a/OnlineShopping/Hosts/UI/OnlineShopping/package.json
+++ b/OnlineShopping/Hosts/UI/OnlineShopping/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "covid-screening",
+  "name": "online-shopping",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -23,30 +23,19 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^5.0.0",
-    "@ng-idle/core": "^8.0.0-beta.4",
-    "@ng-idle/keepalive": "^8.0.0-beta.4",
-    "@syncfusion/ej2-angular-calendars": "^18.1.44",
-    "@types/gijgo": "^1.9.1",
     "@types/jquery": "^3.3.35",
     "angular-crypto-js": "^1.0.7",
-    "angular-in-memory-web-api": "^0.10.0",
-    "angular2-moment": "^1.9.0",
     "bn-ng-idle": "^1.0.1",
     "bootstrap": "^4.4.1",
     "bootstrap-icons": "^1.0.0",
     "classlist.js": "^1.1.20150312",
-    "ej-angular2": "^18.1.42",
-    "gijgo": "^1.9.13",
-    "gijgo-angular-wrappers": "^1.9.8",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.6.1",
-    "ngx-extended-pdf-viewer": "^4.0.2",
     "ngx-loading": "^8.0.0",
     "ngx-toastr": "^11.1.2",
     "popper.js": "^1.16.1",
     "rxjs": "^6.4.0",
-    "save": "^2.4.0",
     "secure-web-storage": "^1.0.2",
     "tslib": "^1.10.0",
     "web-animations-js": "^2.3.2",
