added missing referances

--- a/OnlineShopping/Hosts/API/OnlineShopping.API/appsettings.json
+++ b/OnlineShopping/Hosts/API/OnlineShopping.API/appsettings.json
@@ -6,10 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AllowedOrigins": "http://localhost:4200",
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "OnlineShopping": "Data Source=HSTCPT-ANDERSON;Initial Catalog=OnlineShopping;User ID=sa;Password=ander@211;"
+    "OnlineShopping": "Data Source=HSTCPT-ANDERSON\\MSSQLSERVER2016;Initial Catalog=OnlineShopping;User ID=sa;Password=ander@211;"
   },
   "TokenProviderOptions": {
     "UseIdentity": true,
