updated unit tests

--- a/OnlineShopping/Hosts/API/OnlineShopping.API/appsettings.json
+++ b/OnlineShopping/Hosts/API/OnlineShopping.API/appsettings.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedOrigins": "http://localhost:4200",
+  "AllowedOrigins": "http://localhost:4200,https://localhost:4200",
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
